# gamemaker

./: .gitignore  .gitmodules  COMPATIBLE.md  LICENSE-MIT  README.md
gamemaker/src/: Tomat.GameMaker.sln  Tomat.GameMaker.sln.DotSettings
houli/src/: Tomat.Houli.sln  Tomat.Houli.sln.DotSettings
src/: Tomat.GameMaker.sln  Tomat.GameMaker.sln.DotSettings
src/Tomat.GameBreaker/: GameBreakerApplication.cs  GameBreakerSettings.cs  Log.cs  Program.cs  Tomat.GameBreaker.csproj  Usings.cs
src/Tomat.GameBreaker.API/: Game.cs  Tomat.GameBreaker.API.csproj
src/Tomat.GameBreaker.Compiler.CSharp/: CodeCompilation.cs  Tomat.GameBreaker.Compiler.CSharp.csproj
src/Tomat.GameBreaker.Compiler.CSharp.Runner/: Program.cs  Tomat.GameBreaker.Compiler.CSharp.Runner.csproj
src/Tomat.GameBreaker.Framework/: Tomat.GameBreaker.Framework.csproj
src/Tomat.GameBreaker.Host/: Tomat.GameBreaker.Host.vcxproj  api.cpp  api.h  config.cpp  config.h  console.cpp  dllmain.cpp  dotnet.cpp  dotnet.h  log.cpp  log.h  nethost.props
src/Tomat.GameBreaker.ManagedHost/: ManagedHostGame.cs  NativeMethods.txt  Program.cs  Tomat.GameBreaker.ManagedHost.csproj
src/Tomat.GameBreaker.Runner/: Program.cs
src/Tomat.GameMaker.AssetDumper/: AssetDumperExtensions.cs
src/Tomat.GameMaker.Benchmarks/: Program.cs  Tomat.GameMaker.Benchmarks.csproj  run.sh
src/Tomat.GameMaker.Decompiler/: DecompilerContext.cs  (+3 more)
src/Tomat.GameMaker.Decompiler.CSharp/: CSharpGameMakerDecompiler.cs  Tomat.GameMaker.Decompiler.CSharp.csproj
src/gamebreaker/: Cargo.toml
src/gamebreaker/src/: lib.rs  win.rs
(+635 files in other folders)
