[package]
name = "gamebreaker"
description = "The native Tomat.GameBreaker host"
version = "1.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
toml = "0.7.6"
netcorehost = "0.15.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
] }
